pulldown-cmark-mdcat/tests/snapshots/render/dumb@commonmark-spec-304-lists.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 122
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/304-lists.md
---
The number of windows in my house is 14.  The number of doors is 6.
